allow to select labelset for training

--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -107,7 +107,7 @@
 	"generic.actions": "Actions",
 	"generic.add": "Add",
 	"generic.alert": "Warning! ",
-	"generic.all": "All ",
+	"generic.all": "All",
 	"generic.allow": "Allow",
 	"generic.back": "Back",
 	"generic.back_to_accounts": "Back to Accounts",
@@ -487,14 +487,15 @@
 	"stash.service_access_description": "Important! Copy and save the Token code. It will disappear once added.",
 	"stash.settings": "Knowledge box preferences",
 	"stash.settings.processes": "Processes management",
-	"stash.settings.processes.training": "Labelling training",
-	"stash.settings.processes.training.active": "Training is active, you will receive an email when it has finished. You can stop at any time.",
+	"stash.settings.processes.classifier": "Label search intent training",
+	"stash.settings.processes.classifier.info": "In order to do accurate label search suggestions, existing contents have to be labelled. As more contents are labelled, better will be the training. You can create new labels and classifications in the ontology page. ",
+	"stash.settings.processes.labeller": " Automatic labeller training",
+	"stash.settings.processes.labeller.info": "In order to label automatically sentences, paragraph or resources; existing contents have to be labelled. As more contents are labelled, better will be the training. You can create new labels and classifications in the ontology page. ",
+	"stash.settings.processes.training.active": "There is an active training that you can stop at any time. You will receive an email when it is complete.",
 	"stash.settings.processes.training.agreement": "I accept the consumption of the required hours",
-	"stash.settings.processes.training.info": "In order to do a labelling training, resources need to be classified. As more resources are labeled, better will be the training. You can create new labels and classifications in the ontology page. What do you want to train?",
-	"stash.settings.processes.training.intent": "Intent",
-	"stash.settings.processes.training.labels": "Labels",
 	"stash.settings.processes.training.last_run": "Last run: {{ runDate }}",
 	"stash.settings.processes.training.not-allowed": "The training feature is not available on basic accounts.",
+	"stash.settings.processes.training.select-labelsets": "Select one or more label sets you want to train with",
 	"stash.settings.processes.training.start": "Start training",
 	"stash.settings.processes.training.stop": "Stop training",
 	"stash.settings.processes.training.time_requirement": "The time required to train is about {{hours}} hours which will be subtracted from the available hours.",
