Plan selection page

--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -5,6 +5,7 @@
 	"account.add_user": "Add user",
 	"account.admin.make_admin": "Make Administrator",
 	"account.admin.warning": "If you give to this user an administrator role, the user will be able to access and edit all the options.",
+	"account.billing": "Billing",
 	"account.characters": "Total indexed characters",
 	"account.code_saved": "Code entered",
 	"account.config": "Account settings",
@@ -79,6 +80,26 @@
 	"autocomplete.section.main": "Key concept suggestion",
 	"autocomplete.section.next_words": "Suggested words",
 	"autocomplete.section.paragraph": "Suggested paragraph",
+	"billing.annual": "Annual",
+	"billing.automatically_renewed": "Automatically renewed every month",
+	"billing.free_account": "Free account",
+	"billing.monthly": "Monthly",
+	"billing.monthly_consumibles": "Monthly consumibles",
+	"billing.parameter.docs_no_media": "Docs No Media",
+	"billing.parameter.max_size_file_media": "Max Size File Media",
+	"billing.parameter.max_size_file_no_media": "Max Size File No Media",
+	"billing.parameter.max_storage_bytes": "Max Storage bytes",
+	"billing.parameter.max_storage_docs": "Max Storage docs",
+	"billing.parameter.media": "Media",
+	"billing.parameter.ml_characters": "ML Characters",
+	"billing.parameter.multiple_kb": "More than 1 Knowledge box",
+	"billing.parameter.parallel_processing": "Parallel processing",
+	"billing.parameter.searches": "Searches",
+	"billing.parameter.train_hours": "Train hours",
+	"billing.plans_available": "Plans available",
+	"billing.teams_account": "Teams account",
+	"billing.upgrade": "Upgrade",
+	"billing.upgrade_to": "Upgrade to",
 	"confirm.delete_body": "Delete resource",
 	"confirm.delete_title": "Are you sure to delete this resource?",
 	"empty.body": "It seems we couldn't find any relevant results. Please, try again. ",
