--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -5,6 +5,7 @@
 	"account.add_user": "Añadir usuario",
 	"account.admin.make_admin": "Hacer administrador",
 	"account.admin.warning": "Si le otorgas a este usuario un rol de administrador, el usuario podrá acceder y editar todas las opciones.",
+	"account.billing": "Facturación",
 	"account.code_saved": "Código introducido",
 	"account.config": "Configuración de la cuenta",
 	"account.consuming": "Procesamiento",
@@ -73,6 +74,12 @@
 	"autocomplete.section.main": "Palabras clave sugeridas",
 	"autocomplete.section.next_words": "Palabras sugeridas",
 	"autocomplete.section.paragraph": "Párrafo sugerido",
+	"billing.annual": "Anual",
+	"billing.automatically_renewed": "Se renueva automáticamente cada mes",
+	"billing.monthly": "Mensual",
+	"billing.monthly_consumibles": "Consumo mensual",
+	"billing.plans_available": "Planes disponibles",
+	"billing.upgrade": "Actualizar",
 	"confirm.delete_body": "Eliminar recurso",
 	"confirm.delete_title": "¿Seguro que quieres eliminar este recurso?",
 	"empty.body": "Parece que no hemos podido encontrar ningún resultado lo suficientemente relevante. Por favor, vuelve a intentarlo",
