--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -5,6 +5,7 @@
 	"account.add_user": "Afegir usuari",
 	"account.admin.make_admin": "Fer Administrador",
 	"account.admin.warning": "Si converteixes aquest usuari en administrador podrà accedir i editar a totes les opcions.",
+	"account.billing": "Facturació",
 	"account.code_saved": "Codi introduït",
 	"account.config": "Configuració del compte",
 	"account.consuming": "Processament",
@@ -73,6 +74,12 @@
 	"autocomplete.section.main": "Paraules clau suggerides",
 	"autocomplete.section.next_words": "Paraules suggerides",
 	"autocomplete.section.paragraph": "Paràgraf suggerit",
+	"billing.annual": "Anual",
+	"billing.automatically_renewed": "Es renova automàticament cada mes",
+	"billing.monthly": "Mensual",
+	"billing.monthly_consumibles": "Consums mensuals",
+	"billing.plans_available": "Plans disponibles",
+	"billing.upgrade": "Actualitzar",
 	"confirm.delete_body": "Eliminar recurs",
 	"confirm.delete_title": "Segur que vols eliminar el recurs?",
 	"empty.body": "Sembla que no hem pogut trobar cap resultats que sigui prou rellevant. Si us plau, intenta-ho de nou. ",
