--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -80,11 +80,17 @@
 	"autocomplete.section.main": "Key concept suggestion",
 	"autocomplete.section.next_words": "Suggested words",
 	"autocomplete.section.paragraph": "Suggested paragraph",
+	"billing.add_limit": "Add a limit",
 	"billing.annual": "Annual",
 	"billing.automatically_renewed": "Automatically renewed every month",
+	"billing.budget": "On-demand budget",
+	"billing.budget_description": "Set a monthly economic limit of overspending monthly consumibles.",
+	"billing.customized_plan": "If you need a customized plan for your company contact us at",
 	"billing.free_account": "Free account",
 	"billing.monthly": "Monthly",
 	"billing.monthly_consumibles": "Monthly consumibles",
+	"billing.no_limit": "No limit consumption",
+	"billing.no_limit_description": "If you do not set an excessive spending limit, you will pay for the consumption you made without notice of limits.",
 	"billing.parameter.docs_no_media": "Docs No Media",
 	"billing.parameter.max_size_file_media": "Max Size File Media",
 	"billing.parameter.max_size_file_no_media": "Max Size File No Media",
@@ -96,6 +102,8 @@
 	"billing.parameter.parallel_processing": "Parallel processing",
 	"billing.parameter.searches": "Searches",
 	"billing.parameter.train_hours": "Train hours",
+	"billing.plan_settings": "Plan settings",
+	"billing.plans": "Plans",
 	"billing.plans_available": "Plans available",
 	"billing.teams_account": "Teams account",
 	"billing.upgrade": "Upgrade",
