--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -78,6 +78,8 @@
 	"billing.automatically_renewed": "Se renueva automáticamente cada mes",
 	"billing.monthly": "Mensual",
 	"billing.monthly_consumibles": "Consumo mensual",
+	"billing.plan_settings": "Opciones del plan",
+	"billing.plans": "Planes",
 	"billing.plans_available": "Planes disponibles",
 	"billing.upgrade": "Actualizar",
 	"confirm.delete_body": "Eliminar recurso",
