--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -553,6 +553,7 @@
 	"stash.widgets.rename-title": "Rename search widget",
 	"stash.widgets.snippet": "Code snippet",
 	"stash.widgets.style": "Style",
+	"stash.widgets.suggestLabels": "Suggest labels",
 	"stash.widgets.title": "Search widget generator",
 	"stash.widgets.warning": "In order for the widget to work properly, the <strong>knowledge box must be public</strong>.",
 	"stats.endpoint": "NucliaDB API endpoint",
