display labels in suggestions

--- a/libs/search-widget/public/i18n/ca.json
+++ b/libs/search-widget/public/i18n/ca.json
@@ -38,6 +38,7 @@
 	"results.sentences": "Frases rellevants",
 	"results.summary": "Resum",
 	"suggest.enter": "Premeu Enter ⏎ per veure els resultats",
+	"suggest.intents": "Etiquetes",
 	"suggest.more": "Mostra més resultats",
 	"suggest.paragraphs": "Paràgraf suggerit"
 }
