--- a/libs/search-widget/public/i18n/es.json
+++ b/libs/search-widget/public/i18n/es.json
@@ -38,6 +38,7 @@
 	"results.sentences": "Frases relevantes",
 	"results.summary": "Resumen",
 	"suggest.enter": "Presiona Entrar ⏎ para ver los resultados",
+	"suggest.intents": "Etiquetas",
 	"suggest.more": "Mostrar más resultados",
 	"suggest.paragraphs": "Párrafo sugerido"
 }
