--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -76,11 +76,13 @@
 	"autocomplete.section.paragraph": "Paràgraf suggerit",
 	"billing.annual": "Anual",
 	"billing.automatically_renewed": "Es renova automàticament cada mes",
+	"billing.company_name": "Nom de l'empresa",
 	"billing.monthly": "Mensual",
 	"billing.monthly_consumibles": "Consums mensuals",
 	"billing.plan_settings": "Opcions del pla",
 	"billing.plans": "Plans",
 	"billing.plans_available": "Plans disponibles",
+	"billing.subscribe": "Subscriure's",
 	"billing.upgrade": "Actualitzar",
 	"confirm.delete_body": "Eliminar recurs",
 	"confirm.delete_title": "Segur que vols eliminar el recurs?",
