--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -80,12 +80,15 @@
 	"autocomplete.section.main": "Key concept suggestion",
 	"autocomplete.section.next_words": "Suggested words",
 	"autocomplete.section.paragraph": "Suggested paragraph",
+	"billing.add_card": "Add a Card",
 	"billing.add_limit": "Add a limit",
 	"billing.annual": "Annual",
 	"billing.automatically_renewed": "Automatically renewed every month",
 	"billing.budget": "On-demand budget",
 	"billing.budget_description": "Set a monthly economic limit of overspending monthly consumibles.",
+	"billing.company_name": "Company name",
 	"billing.customized_plan": "If you need a customized plan for your company contact us at",
+	"billing.enter_card_details": "Enter your card details",
 	"billing.free_account": "Free account",
 	"billing.monthly": "Monthly",
 	"billing.monthly_consumibles": "Monthly consumibles",
@@ -102,12 +105,17 @@
 	"billing.parameter.parallel_processing": "Parallel processing",
 	"billing.parameter.searches": "Searches",
 	"billing.parameter.train_hours": "Train hours",
+	"billing.payment_details": "Payment details",
 	"billing.plan_settings": "Plan settings",
 	"billing.plans": "Plans",
 	"billing.plans_available": "Plans available",
+	"billing.subscribe": "Subscribe",
+	"billing.subscribing_to": "Subscribing to",
 	"billing.teams_account": "Teams account",
+	"billing.total_now": "Total due now {{num}}",
 	"billing.upgrade": "Upgrade",
 	"billing.upgrade_to": "Upgrade to",
+	"billing.vat_id": "VAT ID",
 	"confirm.delete_body": "Delete resource",
 	"confirm.delete_title": "Are you sure to delete this resource?",
 	"empty.body": "It seems we couldn't find any relevant results. Please, try again. ",
