--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -76,11 +76,13 @@
 	"autocomplete.section.paragraph": "Párrafo sugerido",
 	"billing.annual": "Anual",
 	"billing.automatically_renewed": "Se renueva automáticamente cada mes",
+	"billing.company_name": "Nombre de la empresa",
 	"billing.monthly": "Mensual",
 	"billing.monthly_consumibles": "Consumo mensual",
 	"billing.plan_settings": "Opciones del plan",
 	"billing.plans": "Planes",
 	"billing.plans_available": "Planes disponibles",
+	"billing.subscribe": "Suscribirse",
 	"billing.upgrade": "Actualizar",
 	"confirm.delete_body": "Eliminar recurso",
 	"confirm.delete_title": "¿Seguro que quieres eliminar este recurso?",
