Ericbrehault/sc 1662/allow to predict and suggests labels in search (#144)
* use tensor flow in widget (WIP)

* use Pastanaga in widget edition

* add suggest param in widget editor

* display labels in suggestions

* clean up + Option to set labels on paragraphs [sc-2003]

* fix typing

--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -561,6 +561,7 @@
 	"stash.widgets": "Widgets",
 	"stash.widgets.add": "Add search widget",
 	"stash.widgets.add-help": "Name your widget to save and identify it",
+	"stash.widgets.editLabels": "Edit labels",
 	"stash.widgets.invalid-id": "Invalid widget id",
 	"stash.widgets.mode": "Mode",
 	"stash.widgets.mode.button": "Button",
@@ -574,6 +575,7 @@
 	"stash.widgets.rename-title": "Rename search widget",
 	"stash.widgets.snippet": "Code snippet",
 	"stash.widgets.style": "Style",
+	"stash.widgets.suggestLabels": "Suggest labels",
 	"stash.widgets.title": "Search widget generator",
 	"stash.widgets.warning": "In order for the widget to work properly, the <strong>knowledge box must be public</strong>.",
 	"stats.endpoint": "NucliaDB API endpoint",
