select all files from connector

--- a/apps/desktop/src/assets/i18n/ca.json
+++ b/apps/desktop/src/assets/i18n/ca.json
@@ -15,6 +15,7 @@
 	"upload.folder.drop": "Arrossega una carpeta",
 	"upload.folder.selected": "La carpeta conté {{num}} arxius",
 	"upload.review": "Has seleccionat {{num}} fitxers. Revisa els fitxers seleccionats i comença el procés.",
+	"upload.select.all": "Seleccionar tot",
 	"upload.select.search": "Cerca",
 	"upload.select.title": "Selecciona els fitxers",
 	"upload.source.help": "Trieu l'origen des del qual voleu pujar tots els fitxers",
