--- a/apps/desktop/src/assets/i18n/es.json
+++ b/apps/desktop/src/assets/i18n/es.json
@@ -15,6 +15,7 @@
 	"upload.folder.drop": "Arrastra una carpeta",
 	"upload.folder.selected": "La carpeta contiene {{num}} archivos",
 	"upload.review": "Has seleccionado {{num}} ficheros. Revisa los ficheros seleccionados y empieza el proceso.",
+	"upload.select.all": "Seleccionar todo",
 	"upload.select.search": "Busca",
 	"upload.select.title": "Selecciona los archivos",
 	"upload.source.help": "Elige el origen desde la que quieres subir todos los archivos",
