--- a/apps/desktop/src/assets/i18n/fr.json
+++ b/apps/desktop/src/assets/i18n/fr.json
@@ -15,6 +15,7 @@
 	"upload.folder.drop": "Poser le dossier ici",
 	"upload.folder.selected": "Le dossier sélectionné a {{num}} fichiers",
 	"upload.review": "Vous avez sélectionné {{num}} fichiers. Vérifiez la sélection puis lancez le traitement.",
+	"upload.select.all": "Sélectionner tout",
 	"upload.select.search": "Rechercher",
 	"upload.select.title": "Sélectionnez les fichiers",
 	"upload.source.help": "Choisissez la source depuis laquelle télécharger les fichiers",
