Simplify key management pages

--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -17,18 +17,17 @@
 	"account.edit_nua_key": "Edit Nuclia understanding API key ",
 	"account.email_info": "Contact email associated with the key",
 	"account.enhanced_model": "Enhanced model",
+	"account.existing_keys": "Existing keys",
 	"account.full_name": "Name and surname",
 	"account.generate_key": "Generate a new key",
 	"account.invited_user": "We have sent an invitation email to {{user}} to join this account",
 	"account.knowledgeboxes": "Knowledge boxes",
 	"account.licence": "License",
-	"account.linked_email": "Email linked to key",
 	"account.logo": "Box image",
 	"account.logo_description": "Select and upload an image",
 	"account.logotip": "Logo",
 	"account.manage": "Manage account",
 	"account.manage_account_users": "Account Users management",
-	"account.manage_dbs": "Nuclia understanding API keys",
 	"account.new_code": "New key",
 	"account.new_token": "New Token",
 	"account.nua_client": "Client name",
