--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -10,30 +10,24 @@
 	"account.config": "Configuración de la cuenta",
 	"account.consuming": "Procesamiento",
 	"account.create_new_db": "Crear nueva cuenta de Nuclia DB",
-	"account.create_nua_key": "TODO",
 	"account.db_zone_description": "Elige la zona y el proveedor de procesamiento que quieres utilizar para esta cuenta. De forma predeterminada aparece la zona escogida en el Account",
 	"account.delete_user_warning": "¿Seguro que quieres eliminar este usuario?",
-	"account.edit_nua_key": "TODO",
 	"account.enhanced_model": "Modelo mejorado",
 	"account.full_name": "Nombre y Apellidos",
 	"account.generate_key": "Generar un nuevo código",
 	"account.invited_user": "Hemos enviado un correo a {{user}} invitándolo en esta cuenta",
 	"account.knowledgeboxes": "Cajas de conocimiento",
 	"account.licence": "Licencia",
-	"account.linked_email": "Correo electrónico vinculado al código",
 	"account.logo": "Imagen de la caja",
 	"account.logo_description": "Selecciona y sube una imagen",
 	"account.logotip": "Logotipo",
 	"account.manage": "Gestión de la cuenta",
 	"account.manage_account_users": "Gestión de los Usuarios de la cuenta",
-	"account.manage_dbs": "TODO",
 	"account.new_code": "Nuevo código",
 	"account.new_token": "Nuevo Token",
-	"account.nua_client": "TODO",
-	"account.nua_key_activity": "TODO",
+	"account.nua_key_activity": "Registro de actividad",
 	"account.nua_key_activity_subtitle": "TODO",
 	"account.nua_key_activity_title": "TODO",
-	"account.nua_keys": "TODO",
 	"account.nua_webhook": "Webhook URL",
 	"account.nua_webhook.help": "Una vez que se procesan sus datos, el resultado se publica en esta URL",
 	"account.related_kbs": "Cajas de conocimiento de la cuenta",
