Improve edit resource templates with Pastanaga

--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -293,6 +293,7 @@
 	"reset.password_reset": "S'ha restaurat la contrasenya",
 	"reset.title": "Crear contrasenya",
 	"resource.access_source_file": "Accedir al document d'origen",
+	"resource.authorship": "Autoria",
 	"resource.back_to_results": "Tornar als resultats",
 	"resource.classification": "Classificació",
 	"resource.close_preview": "Tancar previsualització",
@@ -356,7 +357,7 @@
 	"resource.summary": "Resum",
 	"resource.text": "Text",
 	"resource.textplaceholder": "Escriu aquí ",
-	"resource.title": "Títol",
+	"resource.title": "Títol del recurs",
 	"resource.title_id": "Títol / ID",
 	"resource.total": "Total",
 	"resource.transcript.from": "Des de",
