--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -426,7 +426,7 @@
 	"resource.textplaceholder": "Write here",
 	"resource.thumbnail": "Thumbnail",
 	"resource.thumbnail.help": "Upload an image or choose from proposals",
-	"resource.title": "Title",
+	"resource.title": "Resource title",
 	"resource.title_id": "Title / ID",
 	"resource.total": "Total",
 	"resource.transcript.from": "From",
