Improve spanish translation

--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -293,7 +293,7 @@
 	"reset.password_reset": "Se ha restablecido la contraseña",
 	"reset.title": "Crea contraseña",
 	"resource.access_source_file": "Acceder al documento de origen",
-	"resource.authorship": "Paternidad literaria",
+	"resource.authorship": "Autoría",
 	"resource.back_to_results": "Volver a los resultados",
 	"resource.classification": "Clasificación",
 	"resource.close_preview": "Cerrar previsualización",
