[sc-2011] Edit resource improvements (#161)
* Improve hint component using Pastanaga + optional inverted color

* Improve edit resource templates with Pastanaga

* Fix spacing by removing duplicated scss function from stf

* Improve Label field and resource profile page

In label field:
- replace STF components by Pastanaga ones
- implement a multi-level dropdown as designed
- apply the label color to the chips on label list
- add ability to remove a label directly from the list

In resource profile page:
- fix the spacing around the buttons
- fix the button state when canceling the changes

* Improve thumbnail style

* Improve spanish translation

--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -218,7 +218,7 @@
 	"generic.save": "Save",
 	"generic.select": "Select",
 	"generic.select_language": "Select language",
-	"generic.select_tags": "Select tags",
+	"generic.select_tags": "Select the labels",
 	"generic.sequential": "sequential",
 	"generic.settings": "Settings",
 	"generic.showing": "Showing",
@@ -426,7 +426,7 @@
 	"resource.textplaceholder": "Write here",
 	"resource.thumbnail": "Thumbnail",
 	"resource.thumbnail.help": "Upload an image or choose from proposals",
-	"resource.title": "Title",
+	"resource.title": "Resource title",
 	"resource.title_id": "Title / ID",
 	"resource.total": "Total",
 	"resource.transcript.from": "From",
