--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -293,6 +293,7 @@
 	"reset.password_reset": "Se ha restablecido la contraseña",
 	"reset.title": "Crea contraseña",
 	"resource.access_source_file": "Acceder al documento de origen",
+	"resource.authorship": "Autoría",
 	"resource.back_to_results": "Volver a los resultados",
 	"resource.classification": "Clasificación",
 	"resource.close_preview": "Cerrar previsualización",
@@ -356,7 +357,7 @@
 	"resource.summary": "Resumen",
 	"resource.text": "Texto",
 	"resource.textplaceholder": "Escribe aquí",
-	"resource.title": "Título",
+	"resource.title": "Título del recurso",
 	"resource.title_id": "Título / ID",
 	"resource.total": "Total",
 	"resource.transcript.from": "Desde",
