Allow to select multiple label sets for training

--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -531,7 +531,7 @@
 	"stash.settings.processes.training.agreement": "I accept the consumption of the required hours",
 	"stash.settings.processes.training.last_run": "Last run: {{ runDate }}",
 	"stash.settings.processes.training.not-allowed": "The training feature is not available on basic accounts.",
-	"stash.settings.processes.training.select-labelsets": "Select one or more label sets you want to train with",
+	"stash.settings.processes.training.select-labelsets": "Choose the label sets",
 	"stash.settings.processes.training.start": "Start training",
 	"stash.settings.processes.training.stop": "Stop training",
 	"stash.settings.processes.training.time_requirement": "The time required to train is about {{hours}} hours which will be subtracted from the available hours.",
