--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -529,6 +529,7 @@
 	"stash.settings.processes.labeller.info": "In order to label automatically sentences, paragraph or resources; existing contents have to be labelled. As more contents are labelled, better will be the training. You can create new labels and classifications in the ontology page. ",
 	"stash.settings.processes.training.active": "There is an active training that you can stop at any time. You will receive an email when it is complete.",
 	"stash.settings.processes.training.agreement": "I accept the consumption of the required hours",
+	"stash.settings.processes.training.all_labelsets": "All label sets",
 	"stash.settings.processes.training.last_run": "Last run: {{ runDate }}",
 	"stash.settings.processes.training.not-allowed": "The training feature is not available on basic accounts.",
 	"stash.settings.processes.training.select-labelsets": "Choose the label sets",
