--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -529,9 +529,10 @@
 	"stash.settings.processes.labeller.info": "In order to label automatically sentences, paragraph or resources; existing contents have to be labelled. As more contents are labelled, better will be the training. You can create new labels and classifications in the ontology page. ",
 	"stash.settings.processes.training.active": "There is an active training that you can stop at any time. You will receive an email when it is complete.",
 	"stash.settings.processes.training.agreement": "I accept the consumption of the required hours",
+	"stash.settings.processes.training.all_labelsets": "All label sets",
 	"stash.settings.processes.training.last_run": "Last run: {{ runDate }}",
 	"stash.settings.processes.training.not-allowed": "The training feature is not available on basic accounts.",
-	"stash.settings.processes.training.select-labelsets": "Select one or more label sets you want to train with",
+	"stash.settings.processes.training.select-labelsets": "Choose the label sets",
 	"stash.settings.processes.training.start": "Start training",
 	"stash.settings.processes.training.stop": "Stop training",
 	"stash.settings.processes.training.time_requirement": "The time required to train is about {{hours}} hours which will be subtracted from the available hours.",
