Show labels in resource viewer

--- a/libs/search-widget/public/i18n/ca.json
+++ b/libs/search-widget/public/i18n/ca.json
@@ -23,6 +23,7 @@
 	"form.title-only": "Cerca només al títol",
 	"input.placeholder": "Escriviu la vostra pregunta aquí",
 	"modal.back": "Tornar",
+	"resource.classification": "Classificació",
 	"resource.creation": "Data de creació",
 	"resource.language": "Idioma",
 	"resource.other": "Altres dades del recurs",
