--- a/libs/search-widget/public/i18n/es.json
+++ b/libs/search-widget/public/i18n/es.json
@@ -23,6 +23,7 @@
 	"form.title-only": "Buscar solo en el título",
 	"input.placeholder": "Escribe tu pregunta aqui",
 	"modal.back": "Volver",
+	"resource.classification": "Classificación",
 	"resource.creation": "Fecha de creación",
 	"resource.language": "Idioma",
 	"resource.other": "Otros datos del recurso",
