[sc-2029]: Add switch account option in user menu
Replace user initials component by Pastanaga Avatar
Replace CDK overlay menu by Pastanaga dropdown

--- a/apps/desktop/src/assets/i18n/ca.json
+++ b/apps/desktop/src/assets/i18n/ca.json
@@ -2,6 +2,7 @@
 	"generic.cancel": "Cancel·lar",
 	"generic.logout": "Sortir",
 	"generic.next": "Següent",
+	"generic.switch_account": "Canviar de compte",
 	"generic.upload": "Pujar",
 	"home.active": "Actiu",
 	"home.add": "Nova pujada",
