--- a/apps/desktop/src/assets/i18n/en.json
+++ b/apps/desktop/src/assets/i18n/en.json
@@ -2,6 +2,7 @@
 	"generic.cancel": "Cancel",
 	"generic.logout": "Logout",
 	"generic.next": "Next step",
+	"generic.switch_account": "Switch account",
 	"generic.upload": "Upload",
 	"home.active": "Active",
 	"home.add": "New upload",
