--- a/apps/desktop/src/assets/i18n/es.json
+++ b/apps/desktop/src/assets/i18n/es.json
@@ -2,6 +2,7 @@
 	"generic.cancel": "Cancelar",
 	"generic.logout": "Salir",
 	"generic.next": "Siguiente",
+	"generic.switch_account": "Cambia de cuenta",
 	"generic.upload": "Subir",
 	"home.active": "Activo",
 	"home.add": "Nueva subida",
