--- a/apps/desktop/src/assets/i18n/fr.json
+++ b/apps/desktop/src/assets/i18n/fr.json
@@ -2,6 +2,7 @@
 	"generic.cancel": "Annuler",
 	"generic.logout": "Déconnexion",
 	"generic.next": "Suivant",
+	"generic.switch_account": "Changer de compte",
 	"generic.upload": "Télécharger",
 	"home.active": "Actifs",
 	"home.add": "Nouveau téléchargement",
