[sc-1837]: new dark-mode mixin + refactor kb home with Pastanaga

--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -47,6 +47,7 @@
 	"account.stash.delete": "Delete",
 	"account.stash.edit": "Edit preferences",
 	"account.stash.publish": "Publish",
+	"account.stash.refresh_counters": "Refresh counters",
 	"account.stash.retire": "Move to private",
 	"account.stash.upgrade": "Increase KB maximum",
 	"account.stash.users": "Users management",
