--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -38,6 +38,7 @@
 	"account.stash.delete": "Borrar",
 	"account.stash.edit": "Editar preferències",
 	"account.stash.publish": "Publicar",
+	"account.stash.refresh_counters": "Actualitzar comptadors",
 	"account.stash.retire": "Moure a privat",
 	"account.stash.upgrade": "Incrementar màxim KB",
 	"account.stash.users": "Gestió d'usuaris",
