Fix [sc-2107]: prevent removing the last user of a KB
Disable delete button on:
- the only user left for this kb
- the only owner of the KB (we can delete an owner of a KB only if there is another owner on the kb)

Disabled select role of a user when:
- the user is not an account manager
- the user is an account manager but the user is the only owner of the kb

--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -61,7 +61,7 @@
 	"account.type.kb": "Knowledge box",
 	"account.type.manage": "Manage",
 	"account.users": "Account users management",
-	"account.users_amount": "Total amount of users in the account",
+	"account.users_amount": "Total number of users in the account",
 	"account.users_left": "Total sits left",
 	"account.zone_description": "Zone where data will be host",
 	"accounts.add_user_input": "User's email",
